Optional scrollbar styling, fix avatar borders, minor code syntax fixes

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
   background: rgba(0,0,0,.15) !important;
   border: none !important;
   float: right;
-  width: 101px !important;
+  width: 110px !important;
 }
 .global-nav .search-input:focus, .global-nav .search-input.focus {
   width: 163px !important;
@@ -61,6 +61,9 @@
 }
 
 /* Content */
+.three-col .content-main {
+  width: 100% !important;
+}
 .btn, .twttr-dialog-header h3, .settings-header {
   font-weight: normal !important;
 }
@@ -220,9 +223,3 @@ h2, .fullname, .stats a strong {
 .dm-thread .chev-right {
   -webkit-transform: none;
 }
-
-::-webkit-scrollbar {width:8px;height:8px;}
-::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {display:block;height:0;background-color:#eee;}
-::-webkit-scrollbar-track-piece {background-color:#eee;}
-::-webkit-scrollbar-thumb:vertical {height:50px;background-color:#999;border-radius:8px;}
-::-webkit-scrollbar-thumb:horizontal {width:50px;background-color:#999;border-radius:8px;}
